--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     <!-- <script src='main.js'></script> -->
 </head>
 <body>
-    <a href="https://http://os.sparrowstudio.dpdns.org/">SparrowOS</a>
+    <a href="https://os.sparrowstudio.dpdns.org/">SparrowOS</a>
 </body>
 </html>
